src/bin/crates-io/admin/snapshots/crates_io__admin__sync_index__tests__enqueue_sync_jobs_no_sparse.snap
---
source: src/bin/crates-io/admin/sync_index.rs
expression: all_jobs(&mut conn).await
---
[
  {
    "job_type": "sync_to_git_index",
    "data": {
      "krate": "foo"
    }
  }
]
